[package]
name = "adventof2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
lazy_static = "1.5.0"
num = "0.4.3"
once_cell = "1.20.2"
regex = "1.11.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "days"
harness = false
